fixing dark mode issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,6 +31,9 @@ mat-slide-toggle .mdc-label {
   .page-content {
     background: #323743;
   }
+  .mat-drawer-container{
+    background: #323743;
+  }
   h1,h2,h3,h4,h6{
     color: #fff !important;
   }
